--- a/exercise_03.ipynb
+++ b/exercise_03.ipynb
@@ -17,7 +17,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 82,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -54,7 +54,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 83,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -87,7 +87,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 84,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -104,7 +104,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 85,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -141,7 +141,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 86,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -539,7 +539,7 @@
        ")"
       ]
      },
-     "execution_count": 86,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -562,13 +562,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 87,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
     "prompt = 'a photo of a' # you can try different prompt\n",
     "\n",
-    "def prompt_encode(prompt):\n",
+    "def prompt_encode():\n",
     "    \"\"\"\n",
     "    Args:\n",
     "        prompt (str): the text prefix before the class\n",
@@ -578,7 +578,7 @@
     "\n",
     "    \"\"\"\n",
     "    ##################### Write your answer here ##################\n",
-    "    \n",
+    "    text_inputs = torch.cat([clip.tokenize(f\"a photo of a {c}\") for c in class_names]).to(device)\n",
     "\n",
     "    ###############################################################\n",
     "    \n",
@@ -602,7 +602,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 88,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -610,6 +610,14 @@
     "def model_inference(model, image, text_inputs):\n",
     "\n",
     "    ##################### Write your answer here ##################\n",
+    "    \n",
+    "    \n",
+    "    #image_feature = model.encode_image(image)\n",
+    "    \n",
+    "    #text_feature = model.encode_text(text_inputs)\n",
+    "    \n",
+    "    logits,logits_t = model(image, text_inputs)\n",
+    "\n",
     "    \n",
     "\n",
     "    ###############################################################\n",
@@ -627,14 +635,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 89,
+   "execution_count": 52,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "the zero-shot performance on CIFAR10 is 55.84%, visual encoder is RN50\n"
+      "the zero-shot performance on CIFAR10 is 55.84%, visual encoder is RN50.\n"
      ]
     }
    ],
@@ -645,9 +653,20 @@
     "\n",
     "with torch.no_grad():\n",
     "    model.eval()\n",
-    "\n",
+    "    val_corrects = 0\n",
     "    ##################### Write your answer here ##################\n",
+    "    for batch_idx, (image, target) in enumerate(test_dataloader):\n",
     "\n",
+    "            image = image.to(device)\n",
+    "            text_inputs = prompt_encode().to(device)\n",
+    "            target = target.to(device)    \n",
+    "            logits = model_inference(model,image,text_inputs)       \n",
+    "            probs = logits.softmax(dim=-1).to(device)\n",
+    "            _, preds = torch.max(probs,1)\n",
+    "            val_corrects += torch.sum(preds == target.data)\n",
+    "          \n",
+    "           \n",
+    "    val_acc = val_corrects / len(test_set)\n",
     "\n",
     "\n",
     "     ###############################################################\n",
@@ -656,8 +675,16 @@
     "\n",
     "    print(f\"the zero-shot performance on {dataset_name} is {val_acc*100:.2f}%, visual encoder is {VISUAL_BACKBONE}.\")\n",
     "\n",
-    "\n"
+    "\n",
+    "   "
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
