--- a/exercise_03.ipynb
+++ b/exercise_03.ipynb
@@ -17,7 +17,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 82,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -54,7 +54,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 83,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -87,7 +87,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 84,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -104,7 +104,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 85,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -123,7 +123,7 @@
     "    transforms.Normalize((0.4914, 0.4822, 0.4465), (0.2023, 0.1994, 0.2010)),\n",
     "])\n",
     "\n",
-    "test_set = torchvision.datasets.CIFAR10(root='/shareddata', train=False,\n",
+    "test_set = torchvision.datasets.CIFAR10(root='../shareddata', train=False,\n",
     "                                       download=True, transform=transform_cifar10_test)\n",
     "test_dataloader = torch.utils.data.DataLoader(test_set, batch_size=BATCH_SIZE,\n",
     "                                         shuffle=False, num_workers=2)\n",
@@ -141,7 +141,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 86,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -539,14 +539,14 @@
        ")"
       ]
      },
-     "execution_count": 86,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "# Load the model\n",
-    "model, preprocess = clip.load(name=VISUAL_BACKBONE, device=device, download_root='/shareddata/clip/')\n",
+    "model, preprocess = clip.load(name=VISUAL_BACKBONE, device=device, download_root='../shareddata/clip/')\n",
     "model.to(device)"
    ]
   },
@@ -562,7 +562,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 87,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -578,7 +578,9 @@
     "\n",
     "    \"\"\"\n",
     "    ##################### Write your answer here ##################\n",
+    "    text_inputs = torch.cat([clip.tokenize(prompt + \" \" + c) for c in class_names])\n",
     "    \n",
+    "    return text_inputs\n",
     "\n",
     "    ###############################################################\n",
     "    \n",
@@ -602,7 +604,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 88,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -610,7 +612,11 @@
     "def model_inference(model, image, text_inputs):\n",
     "\n",
     "    ##################### Write your answer here ##################\n",
-    "    \n",
+    "    with torch.no_grad():\n",
+    "        logits_per_image, logits_per_text = model(image, text_inputs.to(image.device))\n",
+    "        logits = logits_per_image\n",
+    "\n",
+    "    return logits\n",
     "\n",
     "    ###############################################################\n",
     "\n",
@@ -627,14 +633,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 89,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "the zero-shot performance on CIFAR10 is 55.84%, visual encoder is RN50\n"
+      "the zero-shot performance on CIFAR10 is 55.70%, visual encoder is RN50.\n"
      ]
     }
    ],
@@ -647,7 +653,15 @@
     "    model.eval()\n",
     "\n",
     "    ##################### Write your answer here ##################\n",
+    "    for batch_idx, (inputs, targets) in enumerate(test_dataloader):\n",
+    "        inputs, targets = inputs.to(device), targets.to(device)\n",
+    "        text_inputs = prompt_encode(prompt).to(device)\n",
     "\n",
+    "        logits = model_inference(model, inputs, text_inputs)\n",
+    "        _, predicted = logits.max(1)\n",
+    "        acc = predicted.eq(targets).sum().item() / targets.size(0)\n",
+    "        testing_acc.append(acc)\n",
+    "    val_acc = np.mean(testing_acc)\n",
     "\n",
     "\n",
     "     ###############################################################\n",
@@ -676,7 +690,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.12"
+   "version": "3.11.3"
   }
  },
  "nbformat": 4,
