--- a/exercise_03.ipynb
+++ b/exercise_03.ipynb
@@ -17,7 +17,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 82,
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#pip install ftfy"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -54,7 +63,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 83,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -87,7 +96,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 84,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -104,7 +113,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 85,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -141,7 +150,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 86,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -539,7 +548,7 @@
        ")"
       ]
      },
-     "execution_count": 86,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -562,11 +571,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 87,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
     "prompt = 'a photo of a' # you can try different prompt\n",
+    "\"\"\"\n",
+    "def prompt_encode(prompt):\n",
+    "\n",
+    "    Args:\n",
+    "        prompt (str): the text prefix before the class\n",
+    "\n",
+    "    Returns:\n",
+    "        text_inputs(torch.Tensor)\n",
+    "\n",
+    "    \n",
+    "    ##################### Write your answer here ##################\n",
+    "    \n",
+    "\n",
+    "    ###############################################################\n",
+    "    \n",
+    "    return text_inputs\n",
+    "\"\"\"\n",
+    "\n",
+    "#from transformers import CLIPProcessor, CLIPModel\n",
+    "prompt = \"asdqwedqwdwda\"\n",
+    "text_inputs = torch.cat([clip.tokenize(f\"{prompt} {c}\") for c in class_names]).to(device)\n",
     "\n",
     "def prompt_encode(prompt):\n",
     "    \"\"\"\n",
@@ -574,13 +604,19 @@
     "        prompt (str): the text prefix before the class\n",
     "\n",
     "    Returns:\n",
-    "        text_inputs(torch.Tensor)\n",
-    "\n",
+    "        text_inputs (torch.Tensor): Encoded tensor for the given prompt\n",
     "    \"\"\"\n",
-    "    ##################### Write your answer here ##################\n",
-    "    \n",
+    "    \"\"\"\n",
+    "    # Load the CLIP model and preprocessor\n",
+    "    device = \"cuda\" if torch.cuda.is_available() else \"cpu\"\n",
+    "    model, preprocess = clip.load(\"ViT-B/32\", device=device)\n",
     "\n",
-    "    ###############################################################\n",
+    "    # Tokenize and encode the text prompt\n",
+    "    with torch.no_grad():\n",
+    "        text_inputs = preprocess(prompt)\n",
+    "    \"\"\"\n",
+    "        \n",
+    "    text_inputs = torch.cat([clip.tokenize(f\"{prompt} {c}\") for c in class_names]).to(device)\n",
     "    \n",
     "    return text_inputs\n"
    ]
@@ -602,11 +638,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 88,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
-    "\n",
+    "\"\"\"\n",
     "def model_inference(model, image, text_inputs):\n",
     "\n",
     "    ##################### Write your answer here ##################\n",
@@ -614,6 +650,37 @@
     "\n",
     "    ###############################################################\n",
     "\n",
+    "    return logits\n",
+    "\"\"\"\n",
+    "def model_inference(model, image, text_inputs):\n",
+    "    \"\"\"\n",
+    "    image_encoding = model.encode_image(image)  # Step 1: Encode the image\n",
+    "    text_encoding = model.encode_text(text_inputs)  # Step 2: Encode the text\n",
+    "    logits = model.calculate_logits(image_encoding, text_encoding)  # Step 3: Calculate the logits\n",
+    "    \"\"\"\n",
+    "    \"\"\"\n",
+    "    with torch.no_grad():\n",
+    "        image_features = model.encode_image(image)\n",
+    "        text_features = model.encode_text(text_inputs)\n",
+    "        \n",
+    "    logits_per_image, logits_per_text = model(image, text_inputs)\n",
+    "    probs = logits_per_image.softmax(dim=-1).cpu().numpy()\n",
+    "    logits = logits_per_image\n",
+    "    \n",
+    "    image_features = model.encode_image(image)\n",
+    "    text_features = model.encode_text(text_inputs)\n",
+    "    \"\"\"\n",
+    "    with torch.no_grad():\n",
+    "        image_features = model.encode_image(image)\n",
+    "        text_features = model.encode_text(text_inputs)\n",
+    "        \n",
+    "    image_features /= image_features.norm(dim=-1, keepdim=True)\n",
+    "    text_features /= text_features.norm(dim=-1, keepdim=True)\n",
+    "\n",
+    "    logit_scale = model.logit_scale.exp()\n",
+    "\n",
+    "    logits = logit_scale * image_features @ text_features.t()\n",
+    "    \n",
     "    return logits"
    ]
   },
@@ -627,14 +694,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 89,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "the zero-shot performance on CIFAR10 is 55.84%, visual encoder is RN50\n"
+      "the zero-shot performance on CIFAR10 is 54.95%, visual encoder is RN50.\n"
      ]
     }
    ],
@@ -647,8 +714,56 @@
     "    model.eval()\n",
     "\n",
     "    ##################### Write your answer here ##################\n",
+    "    \"\"\"\n",
+    "    for images, labels in test_dataloader:\n",
+    "        images, labels = images.to(device), labels.to(device)  # Assuming device is properly defined\n",
+    "        text_inputs = prompt_encode(prompt)  # 提示信息\n",
+    "        logits = model_inference(model, images, text_inputs)\n",
+    "        # 处理logits以获得最终的预测结果\n",
     "\n",
+    "        outputs = model(images)\n",
+    "        loss = criterion(outputs, labels)\n",
+    "        testing_loss.append(loss.item())\n",
     "\n",
+    "        _, predicted = torch.max(outputs, 1)\n",
+    "        correct = (predicted == labels).sum().item()\n",
+    "        accuracy = correct / labels.size(0)\n",
+    "        testing_acc.append(accuracy)\n",
+    "\n",
+    "    val_loss = sum(testing_loss) / len(testing_loss)\n",
+    "    val_acc = sum(testing_acc) / len(testing_acc)\n",
+    "    \n",
+    "    \"\"\"\n",
+    "    \"\"\"\n",
+    "    correct_predictions=0\n",
+    "    for image, class_id in test_dataloader:\n",
+    "        image = image.to(device)\n",
+    "        class_id = class_id.to(device).long()\n",
+    "        \n",
+    "        logits = model_inference(model, image, text_inputs)\n",
+    "        #print(image)\n",
+    "        #print(text_inputs)\n",
+    "        predictions = logits.argmax(dim=-1)\n",
+    "        correct_predictions += (predictions == class_id).sum().item()\n",
+    "        \n",
+    "    val_acc =correct_predictions / len(test_set)\n",
+    "    \"\"\"\n",
+    "    \n",
+    "    val_loss = 0.0\n",
+    "    val_corrects = 0\n",
+    "\n",
+    "    for batch_idx, (image, target) in enumerate(test_dataloader):\n",
+    "\n",
+    "        image = image.to(device)\n",
+    "        target = target.to(device)\n",
+    "\n",
+    "        # test model\n",
+    "        logits = model_inference(model, image, text_inputs)\n",
+    "        _, preds = torch.max(logits, 1)\n",
+    "        \n",
+    "        val_corrects += torch.sum(preds == target.data)\n",
+    "\n",
+    "    val_acc = val_corrects.double() / len(test_set)\n",
     "\n",
     "     ###############################################################\n",
     "\n",
