--- a/exercise_03.ipynb
+++ b/exercise_03.ipynb
@@ -17,7 +17,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 82,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -54,7 +54,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 83,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -87,7 +87,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 84,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -104,7 +104,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 85,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -129,7 +129,7 @@
     "                                         shuffle=False, num_workers=2)\n",
     "\n",
     "class_names = ['airplane', 'automobile', 'bird', 'cat', 'deer', 'dog', 'frog', 'horse', 'ship', 'truck']\n",
-    "dataset_name = 'CIFAR10'"
+    "dataset_name = 'CIFAR10'\n"
    ]
   },
   {
@@ -141,7 +141,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 86,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -539,7 +539,7 @@
        ")"
       ]
      },
-     "execution_count": 86,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -562,27 +562,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 87,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
     "prompt = 'a photo of a' # you can try different prompt\n",
     "\n",
-    "def prompt_encode(prompt):\n",
-    "    \"\"\"\n",
-    "    Args:\n",
-    "        prompt (str): the text prefix before the class\n",
     "\n",
-    "    Returns:\n",
-    "        text_inputs(torch.Tensor)\n",
     "\n",
-    "    \"\"\"\n",
-    "    ##################### Write your answer here ##################\n",
-    "    \n",
-    "\n",
+    "    ##################### Write your answer here ##################   \n",
+    "text_inputs =torch.cat([clip.tokenize(prompt+f\" {c}\") for c in class_names]).to(device)\n",
     "    ###############################################################\n",
     "    \n",
-    "    return text_inputs\n"
+    "\n"
    ]
   },
   {
@@ -602,15 +594,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 88,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
     "\n",
-    "def model_inference(model, image, text_inputs):\n",
+    "def model_inference(model, image):\n",
+    "    \"\"\"\n",
+    "    Perform one testing batch iteration.\n",
+    "\n",
+    "    Args:\n",
+    "        model (torch.nn.Module): The machine learning model to evaluate.\n",
+    "        image (torch.Tensor): Batch of input data (images).\n",
+    "        target (torch.Tensor): Batch of target labels.\n",
+    "\n",
+    "    Returns:\n",
+    "        torch.Tensor: Model output (predictions) for the batch.\n",
+    "        torch.Tensor: Loss value calculated for the batch.\n",
+    "    \"\"\"\n",
     "\n",
     "    ##################### Write your answer here ##################\n",
     "    \n",
+    "    image_features = model.encode_image(image)\n",
+    "    text_features = model.encode_text(text_inputs)\n",
+    "\n",
+    "    image_features /= image_features.norm(dim=-1, keepdim=True)\n",
+    "    text_features /= text_features.norm(dim=-1, keepdim=True)\n",
+    "\n",
+    "    logit_scale = model.logit_scale.exp()\n",
+    "\n",
+    "    logits = logit_scale * image_features @ text_features.t()\n",
     "\n",
     "    ###############################################################\n",
     "\n",
@@ -627,14 +640,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 89,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "the zero-shot performance on CIFAR10 is 55.84%, visual encoder is RN50\n"
+      "the zero-shot performance on CIFAR10 is 55.84%, visual encoder is RN50.\n"
      ]
     }
    ],
@@ -646,17 +659,25 @@
     "with torch.no_grad():\n",
     "    model.eval()\n",
     "\n",
-    "    ##################### Write your answer here ##################\n",
+    "    val_loss = 0.0\n",
+    "    val_corrects = 0\n",
+    "\n",
+    "    for batch_idx, (image, target) in enumerate(test_dataloader):\n",
+    "\n",
+    "        image = image.to(device)\n",
+    "        target = target.to(device)\n",
+    "\n",
+    "        # test model\n",
+    "        logits = model_inference(model, image)\n",
+    "        _, preds = torch.max(logits, 1)\n",
+    "        \n",
+    "        val_corrects += torch.sum(preds == target.data)\n",
+    "\n",
+    "    val_acc = val_corrects.double() / len(test_set)\n",
     "\n",
     "\n",
     "\n",
-    "     ###############################################################\n",
-    "\n",
-    "\n",
-    "\n",
-    "    print(f\"the zero-shot performance on {dataset_name} is {val_acc*100:.2f}%, visual encoder is {VISUAL_BACKBONE}.\")\n",
-    "\n",
-    "\n"
+    "    print(f\"the zero-shot performance on {dataset_name} is {val_acc*100:.2f}%, visual encoder is {VISUAL_BACKBONE}.\")"
    ]
   }
  ],
