--- a/exercise_03.ipynb
+++ b/exercise_03.ipynb
@@ -17,7 +17,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 82,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -38,11 +38,36 @@
     "from torchvision import datasets\n",
     "from torchvision import transforms\n",
     "import torchvision\n",
+    "from sklearn.linear_model import LogisticRegression\n",
     "\n",
     "from PIL import Image, ImageFilter\n",
     "import matplotlib.pyplot as plt\n",
     "from PIL import Image\n",
     "from clip import clip"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Looking in indexes: https://pypi.org/simple, https://pypi.ngc.nvidia.com\n",
+      "Requirement already satisfied: ftfy in /usr/local/lib/python3.10/dist-packages (6.1.1)\n",
+      "Requirement already satisfied: wcwidth>=0.2.5 in /usr/local/lib/python3.10/dist-packages (from ftfy) (0.2.6)\n",
+      "\u001b[33mWARNING: Running pip as the 'root' user can result in broken permissions and conflicting behaviour with the system package manager. It is recommended to use a virtual environment instead: https://pip.pypa.io/warnings/venv\u001b[0m\u001b[33m\n",
+      "\u001b[0m\n",
+      "\u001b[1m[\u001b[0m\u001b[34;49mnotice\u001b[0m\u001b[1;39;49m]\u001b[0m\u001b[39;49m A new release of pip is available: \u001b[0m\u001b[31;49m23.2.1\u001b[0m\u001b[39;49m -> \u001b[0m\u001b[32;49m23.3.1\u001b[0m\n",
+      "\u001b[1m[\u001b[0m\u001b[34;49mnotice\u001b[0m\u001b[1;39;49m]\u001b[0m\u001b[39;49m To update, run: \u001b[0m\u001b[32;49mpython -m pip install --upgrade pip\u001b[0m\n",
+      "Note: you may need to restart the kernel to use updated packages.\n"
+     ]
+    }
+   ],
+   "source": [
+    "pip install ftfy"
    ]
   },
   {
@@ -54,7 +79,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 83,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -87,7 +112,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 84,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -104,7 +129,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 85,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -141,7 +166,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 86,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -539,7 +564,7 @@
        ")"
       ]
      },
-     "execution_count": 86,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -562,7 +587,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 87,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -578,8 +603,7 @@
     "\n",
     "    \"\"\"\n",
     "    ##################### Write your answer here ##################\n",
-    "    \n",
-    "\n",
+    "    text_inputs = torch.cat([clip.tokenize(f\"{prompt} + {c}\") for c in class_names]).to(device)\n",
     "    ###############################################################\n",
     "    \n",
     "    return text_inputs\n"
@@ -602,7 +626,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 88,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -611,7 +635,13 @@
     "\n",
     "    ##################### Write your answer here ##################\n",
     "    \n",
-    "\n",
+    "    image_features = model.encode_image(image)\n",
+    "    text_features = model.encode_text(text_inputs)\n",
+    "    \n",
+    "    image_features /= image_features.norm(dim=-1, keepdim=True)\n",
+    "    text_features /= text_features.norm(dim=-1, keepdim=True)\n",
+    "    \n",
+    "    logits = (100.0 * image_features @ text_features.T).softmax(dim=-1)\n",
     "    ###############################################################\n",
     "\n",
     "    return logits"
@@ -627,14 +657,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 89,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "the zero-shot performance on CIFAR10 is 55.84%, visual encoder is RN50\n"
+      "the zero-shot performance on CIFAR10 is 52.01%, visual encoder is RN50.\n"
      ]
     }
    ],
@@ -647,10 +677,22 @@
     "    model.eval()\n",
     "\n",
     "    ##################### Write your answer here ##################\n",
+    "    correct = 0\n",
+    "    for batch_idx, (image, target) in enumerate(test_dataloader):\n",
     "\n",
-    "\n",
-    "\n",
-    "     ###############################################################\n",
+    "            image = image.to(device)\n",
+    "            target = target.to(device)\n",
+    "            \n",
+    "            text_input = prompt_encode(prompt)\n",
+    "            \n",
+    "            # test model\n",
+    "            logits = model_inference(model, image, text_input)\n",
+    "            _, preds = torch.max(logits, 1)\n",
+    "            \n",
+    "            correct += torch.sum(preds == target.data)\n",
+    "    \n",
+    "    val_acc = correct /  len(test_set)\n",
+    "    ###############################################################\n",
     "\n",
     "\n",
     "\n",
@@ -658,6 +700,27 @@
     "\n",
     "\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
