--- a/exercise_03.ipynb
+++ b/exercise_03.ipynb
@@ -578,7 +578,7 @@
     "\n",
     "    \"\"\"\n",
     "    ##################### Write your answer here ##################\n",
-    "    \n",
+    "    text_inputs = torch.cat([clip.tokenize(f\"{prompt} {c}\") for c in class_names]).to(device)\n",
     "\n",
     "    ###############################################################\n",
     "    \n",
@@ -610,7 +610,16 @@
     "def model_inference(model, image, text_inputs):\n",
     "\n",
     "    ##################### Write your answer here ##################\n",
-    "    \n",
+    "     \n",
+    "    image_features = model.encode_image(image)\n",
+    "    text_features = model.encode_text(text_inputs)\n",
+    "\n",
+    "    image_features /= image_features.norm(dim=-1, keepdim=True)\n",
+    "    text_features /= text_features.norm(dim=-1, keepdim=True)\n",
+    "\n",
+    "    logit_scale = model.logit_scale.exp()\n",
+    "\n",
+    "    logits = logit_scale * image_features @ text_features.t()\n",
     "\n",
     "    ###############################################################\n",
     "\n",
@@ -648,7 +657,21 @@
     "\n",
     "    ##################### Write your answer here ##################\n",
     "\n",
+    "    val_loss = 0.0\n",
+    "    val_corrects = 0\n",
     "\n",
+    "    for batch_idx, (image, target) in enumerate(test_dataloader):\n",
+    "\n",
+    "        image = image.to(device)\n",
+    "        target = target.to(device)\n",
+    "\n",
+    "        # test model\n",
+    "        logits = model_inference(model, image)\n",
+    "        _, preds = torch.max(logits, 1)\n",
+    "        \n",
+    "        val_corrects += torch.sum(preds == target.data)\n",
+    "\n",
+    "    val_acc = val_corrects.double() / len(test_set)\n",
     "\n",
     "     ###############################################################\n",
     "\n",
