--- a/reference.ipynb
+++ b/reference.ipynb
@@ -17,46 +17,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Looking in indexes: https://pypi.org/simple, https://pypi.ngc.nvidia.com\n",
-      "Requirement already satisfied: torch in /usr/local/lib/python3.10/dist-packages (2.1.0a0+32f93b1)\n",
-      "Requirement already satisfied: torchvision in /usr/local/lib/python3.10/dist-packages (0.16.0a0)\n",
-      "Requirement already satisfied: filelock in /usr/local/lib/python3.10/dist-packages (from torch) (3.12.4)\n",
-      "Requirement already satisfied: typing-extensions in /usr/local/lib/python3.10/dist-packages (from torch) (4.7.1)\n",
-      "Requirement already satisfied: sympy in /usr/local/lib/python3.10/dist-packages (from torch) (1.12)\n",
-      "Requirement already satisfied: networkx in /usr/local/lib/python3.10/dist-packages (from torch) (2.6.3)\n",
-      "Requirement already satisfied: jinja2 in /usr/local/lib/python3.10/dist-packages (from torch) (3.1.2)\n",
-      "Requirement already satisfied: fsspec in /usr/local/lib/python3.10/dist-packages (from torch) (2023.6.0)\n",
-      "Requirement already satisfied: numpy in /usr/local/lib/python3.10/dist-packages (from torchvision) (1.22.2)\n",
-      "Requirement already satisfied: requests in /usr/local/lib/python3.10/dist-packages (from torchvision) (2.31.0)\n",
-      "Requirement already satisfied: pillow!=8.3.*,>=5.3.0 in /usr/local/lib/python3.10/dist-packages (from torchvision) (9.2.0)\n",
-      "Requirement already satisfied: MarkupSafe>=2.0 in /usr/local/lib/python3.10/dist-packages (from jinja2->torch) (2.1.3)\n",
-      "Requirement already satisfied: charset-normalizer<4,>=2 in /usr/local/lib/python3.10/dist-packages (from requests->torchvision) (3.2.0)\n",
-      "Requirement already satisfied: idna<4,>=2.5 in /usr/local/lib/python3.10/dist-packages (from requests->torchvision) (3.4)\n",
-      "Requirement already satisfied: urllib3<3,>=1.21.1 in /usr/local/lib/python3.10/dist-packages (from requests->torchvision) (1.26.16)\n",
-      "Requirement already satisfied: certifi>=2017.4.17 in /usr/local/lib/python3.10/dist-packages (from requests->torchvision) (2023.7.22)\n",
-      "Requirement already satisfied: mpmath>=0.19 in /usr/local/lib/python3.10/dist-packages (from sympy->torch) (1.3.0)\n",
-      "\u001b[33mWARNING: Running pip as the 'root' user can result in broken permissions and conflicting behaviour with the system package manager. It is recommended to use a virtual environment instead: https://pip.pypa.io/warnings/venv\u001b[0m\u001b[33m\n",
-      "\u001b[0m\n",
-      "\u001b[1m[\u001b[0m\u001b[34;49mnotice\u001b[0m\u001b[1;39;49m]\u001b[0m\u001b[39;49m A new release of pip is available: \u001b[0m\u001b[31;49m23.2.1\u001b[0m\u001b[39;49m -> \u001b[0m\u001b[32;49m23.3.1\u001b[0m\n",
-      "\u001b[1m[\u001b[0m\u001b[34;49mnotice\u001b[0m\u001b[1;39;49m]\u001b[0m\u001b[39;49m To update, run: \u001b[0m\u001b[32;49mpython -m pip install --upgrade pip\u001b[0m\n",
-      "Note: you may need to restart the kernel to use updated packages.\n"
-     ]
-    }
-   ],
-   "source": [
-    "pip install torch torchvision"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -93,7 +54,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -126,7 +87,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -143,7 +104,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -162,7 +123,7 @@
     "    transforms.Normalize((0.4914, 0.4822, 0.4465), (0.2023, 0.1994, 0.2010)),\n",
     "])\n",
     "\n",
-    "test_set = torchvision.datasets.CIFAR10(root='/shareddata', train=False,\n",
+    "test_set = torchvision.datasets.CIFAR10(root='/data/dataset/', train=False,\n",
     "                                       download=True, transform=transform_cifar10_test)\n",
     "test_dataloader = torch.utils.data.DataLoader(test_set, batch_size=BATCH_SIZE,\n",
     "                                         shuffle=False, num_workers=2)\n",
@@ -180,7 +141,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -578,14 +539,14 @@
        ")"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "# Load the model\n",
-    "model, preprocess = clip.load(name=VISUAL_BACKBONE, device=device, download_root='/shareddata/clip/')\n",
+    "model, preprocess = clip.load(name=VISUAL_BACKBONE, device=device, download_root='/data/home/wsy/.cache/clip/')\n",
     "model.to(device)"
    ]
   },
@@ -593,81 +554,68 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Task 1: Prompt Gereration\n",
-    "---\n",
-    "\n",
-    "Please denfine a function named ``prompt_encode`` to encode the text using CLIP text encoder.\n"
+    "### Encode text "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
-    "prompt = 'a photo of a' # you can try different prompt\n",
+    "prompt = \"asdqwedqwdwda\"\n",
     "\n",
-    "def prompt_encode(prompt):\n",
-    "    \"\"\"\n",
-    "    Args:\n",
-    "        prompt (str): the text prefix before the class\n",
-    "\n",
-    "    Returns:\n",
-    "        text_inputs(torch.Tensor)\n",
-    "\n",
-    "    \"\"\"\n",
-    "    ##################### Write your answer here ##################\n",
-    "    text_inputs = torch.cat([clip.tokenize(f\"{prompt} {name}\")for name in class_names]).to(device)\n",
-    "\n",
-    "    ###############################################################\n",
-    "    \n",
-    "    return text_inputs\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 8,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "text_inputs = prompt_encode(prompt)"
+    "text_inputs = torch.cat([clip.tokenize(f\"{prompt} {c}\") for c in class_names]).to(device)\n"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Task 2: Zero-shot inference\n",
+    "### Task 1: Zero-shot accuracy calculation\n",
     "---\n",
     "\n",
-    "Please denfine a function named ``model_inference``. The function is essential for training and evaluating machine learning models using batched data from dataloaders.\n",
+    "Please denfine two function named ``train_batch`` and ``test_batch``. These functions are essential for training and evaluating machine learning models using batched data from dataloaders.\n",
     "\n",
     "**To do**: \n",
-    "1. Encode the image.\n",
-    "2. Encode the text.\n",
-    "3. Calculate the logits."
+    "1. Define the loss function i.e [nn.CrossEntropyLoss()](https://pytorch.org/docs/stable/generated/torch.nn.CrossEntropyLoss.html).\n",
+    "2. Take the image as the input and generate the output using the pre-defined SimpleNet.\n",
+    "3. Calculate the loss between the output and the corresponding label using the loss function."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
     "\n",
-    "def model_inference(model, image, text_inputs):\n",
+    "def model_inference(model, image):\n",
+    "    \"\"\"\n",
+    "    Perform one testing batch iteration.\n",
+    "\n",
+    "    Args:\n",
+    "        model (torch.nn.Module): The machine learning model to evaluate.\n",
+    "        image (torch.Tensor): Batch of input data (images).\n",
+    "        target (torch.Tensor): Batch of target labels.\n",
+    "\n",
+    "    Returns:\n",
+    "        torch.Tensor: Model output (predictions) for the batch.\n",
+    "        torch.Tensor: Loss value calculated for the batch.\n",
+    "    \"\"\"\n",
     "\n",
     "    ##################### Write your answer here ##################\n",
     "    \n",
-    "    with torch.no_grad():\n",
-    "        image_features = model.encode_image(image)\n",
-    "        text_features = model.encode_text(text_inputs)\n",
-    "  \n",
-    "    \n",
-    "    logits_per_image, logits_per_text = model(image, text_inputs)\n",
-    "    probs = logits_per_image.softmax(dim=-1).cpu().numpy()\n",
-    "    logits = logits_per_image\n",
-    "    \n",
+    "    image_features = model.encode_image(image)\n",
+    "    text_features = model.encode_text(text_inputs)\n",
+    "\n",
+    "    image_features /= image_features.norm(dim=-1, keepdim=True)\n",
+    "    text_features /= text_features.norm(dim=-1, keepdim=True)\n",
+    "\n",
+    "    logit_scale = model.logit_scale.exp()\n",
+    "\n",
+    "    logits = logit_scale * image_features @ text_features.t()\n",
+    "\n",
     "    ###############################################################\n",
     "\n",
     "    return logits"
@@ -677,20 +625,19 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Task 3: Zero-shot accuracy calculation\n",
-    "---"
+    "### Zero-shot Inference"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "the zero-shot performance on CIFAR10 is 55.84%, visual encoder is RN50.\n"
+      "the zero-shot performance on CIFAR10 is 54.88%, visual encoder is RN50.\n"
      ]
     }
    ],
@@ -702,24 +649,21 @@
     "with torch.no_grad():\n",
     "    model.eval()\n",
     "\n",
-    "    ##################### Write your answer here ##################\n",
-    "    correct_predictions=0\n",
-    "    \n",
-    "    for image, class_id in test_dataloader:\n",
+    "    val_loss = 0.0\n",
+    "    val_corrects = 0\n",
+    "\n",
+    "    for batch_idx, (image, target) in enumerate(test_dataloader):\n",
+    "\n",
     "        image = image.to(device)\n",
-    "        class_id = class_id.to(device).long()\n",
+    "        target = target.to(device)\n",
+    "\n",
+    "        # test model\n",
+    "        logits = model_inference(model, image)\n",
+    "        _, preds = torch.max(logits, 1)\n",
     "        \n",
-    "        logits = model_inference(model,image,text_inputs)\n",
-    "            #print(image)\n",
-    "            #print(text_inputs)\n",
-    "            \n",
-    "        predictions = logits.argmax(dim=-1)\n",
-    "        correct_predictions += (predictions == class_id).sum().item()\n",
+    "        val_corrects += torch.sum(preds == target.data)\n",
     "\n",
-    "    \n",
-    "    val_acc = correct_predictions / len(test_set)\n",
-    "\n",
-    "     ###############################################################\n",
+    "    val_acc = val_corrects.double() / len(test_set)\n",
     "\n",
     "\n",
     "\n",
@@ -727,13 +671,6 @@
     "\n",
     "\n"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
@@ -752,7 +689,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.12"
+   "version": "3.11.3"
   }
  },
  "nbformat": 4,
