--- a/exercise_03.ipynb
+++ b/exercise_03.ipynb
@@ -578,8 +578,7 @@
     "\n",
     "    \"\"\"\n",
     "    ##################### Write your answer here ##################\n",
-    "    \n",
-    "\n",
+    "    text_inputs = torch.cat([clip.tokenize(f\"{prompt} {c}\") for c in class_names]).to(device)\n",
     "    ###############################################################\n",
     "    \n",
     "    return text_inputs\n"
@@ -610,7 +609,16 @@
     "def model_inference(model, image, text_inputs):\n",
     "\n",
     "    ##################### Write your answer here ##################\n",
-    "    \n",
+    "    with torch.no_grad():\n",
+    "        image_features = model.encode_image(image)\n",
+    "        text_features = model.encode_text(text_inputs)\n",
+    "        \n",
+    "        image_features /= image_features.norm(dim=-1, keepdim=True)\n",
+    "        text_features /= text_features.norm(dim=-1, keepdim=True)\n",
+    "\n",
+    "        similarity = (100.0 * image_features @ text_features.T).softmax(dim=-1)\n",
+    "#         values, indices = similarity[0].topk(10)\n",
+    "        logits = similarity[0]\n",
     "\n",
     "    ###############################################################\n",
     "\n",
@@ -647,8 +655,21 @@
     "    model.eval()\n",
     "\n",
     "    ##################### Write your answer here ##################\n",
+    "    val_loss = 0.0\n",
+    "    val_corrects = 0\n",
     "\n",
+    "    for batch_idx, (image, target) in enumerate(test_dataloader):\n",
     "\n",
+    "        image = image.to(device)\n",
+    "        target = target.to(device)\n",
+    "\n",
+    "        # test model\n",
+    "        logits = model_inference(model, image,prompt_encode(prompt))\n",
+    "        _, preds = torch.max(logits, 1)\n",
+    "        \n",
+    "        val_corrects += torch.sum(preds == target.data)\n",
+    "\n",
+    "    val_acc = val_corrects.double() / len(test_set)\n",
     "\n",
     "     ###############################################################\n",
     "\n",
