--- a/exercise_03.ipynb
+++ b/exercise_03.ipynb
@@ -17,7 +17,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 82,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -54,7 +54,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 83,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -87,7 +87,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 84,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -104,7 +104,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 85,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -141,7 +141,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 86,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -539,7 +539,7 @@
        ")"
       ]
      },
-     "execution_count": 86,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -562,7 +562,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 87,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -578,7 +578,7 @@
     "\n",
     "    \"\"\"\n",
     "    ##################### Write your answer here ##################\n",
-    "    \n",
+    "    text_inputs = torch.cat([clip.tokenize(f\"{prompt} {c}\") for c in class_names]).to(device)\n",
     "\n",
     "    ###############################################################\n",
     "    \n",
@@ -602,7 +602,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 88,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -610,11 +610,14 @@
     "def model_inference(model, image, text_inputs):\n",
     "\n",
     "    ##################### Write your answer here ##################\n",
+    "     with torch.no_grad():\n",
+    "        image_features = model.encode_image(image)\n",
+    "        text_features = model.encode_text(text_inputs)\n",
     "    \n",
+    "        logits,_ = model(image,text_inputs)\n",
     "\n",
     "    ###############################################################\n",
-    "\n",
-    "    return logits"
+    "     return logits"
    ]
   },
   {
@@ -627,14 +630,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 89,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "the zero-shot performance on CIFAR10 is 55.84%, visual encoder is RN50\n"
+      "the zero-shot performance on CIFAR10 is 55.84%, visual encoder is RN50.\n"
      ]
     }
    ],
@@ -647,7 +650,22 @@
     "    model.eval()\n",
     "\n",
     "    ##################### Write your answer here ##################\n",
+    "    val_corrects = 0\n",
+    "    text_inputs = prompt_encode(prompt)\n",
+    "    \n",
+    "    for (image, target) in (test_dataloader):\n",
     "\n",
+    "        image = image.to(device)\n",
+    "        target = target.to(device)\n",
+    "\n",
+    "        # test model\n",
+    "\n",
+    "        logits = model_inference(model, image, text_inputs)\n",
+    "        _, preds = torch.max(logits, 1)\n",
+    "\n",
+    "        val_corrects += torch.sum(preds == target.data)\n",
+    "    \n",
+    "    val_acc = val_corrects.double() / len(test_set)\n",
     "\n",
     "\n",
     "     ###############################################################\n",
