--- a/exercise_03.ipynb
+++ b/exercise_03.ipynb
@@ -17,9 +17,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 82,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/usr/local/lib/python3.10/dist-packages/tqdm/auto.py:21: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
+      "  from .autonotebook import tqdm as notebook_tqdm\n"
+     ]
+    }
+   ],
    "source": [
     "import os\n",
     "import time\n",
@@ -54,7 +63,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 83,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -87,7 +96,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 84,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -104,7 +113,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 85,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -128,7 +137,18 @@
     "test_dataloader = torch.utils.data.DataLoader(test_set, batch_size=BATCH_SIZE,\n",
     "                                         shuffle=False, num_workers=2)\n",
     "\n",
-    "class_names = ['airplane', 'automobile', 'bird', 'cat', 'deer', 'dog', 'frog', 'horse', 'ship', 'truck']\n",
+    "class_names = [\n",
+    "    \"A photo of an airplane.\",\n",
+    "    \"A photo of an automobile.\",\n",
+    "    \"A photo of a bird.\",\n",
+    "    \"A photo of a cat.\",\n",
+    "    \"A photo of a deer.\",\n",
+    "    \"A photo of a dog.\",\n",
+    "    \"A photo of a frog.\",\n",
+    "    \"A photo of a horse.\",\n",
+    "    \"A photo of a ship.\",\n",
+    "    \"A photo of a truck.\"\n",
+    "]\n",
     "dataset_name = 'CIFAR10'"
    ]
   },
@@ -141,7 +161,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 86,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -539,7 +559,7 @@
        ")"
       ]
      },
-     "execution_count": 86,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -562,11 +582,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 87,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
-    "prompt = 'a photo of a' # you can try different prompt\n",
+    "prompt = 'This is' # you can try different prompt\n",
     "\n",
     "def prompt_encode(prompt):\n",
     "    \"\"\"\n",
@@ -579,6 +599,7 @@
     "    \"\"\"\n",
     "    ##################### Write your answer here ##################\n",
     "    \n",
+    "    text_inputs = torch.cat([clip.tokenize(f\"{prompt} {c}\") for c in class_names]).to(device) \n",
     "\n",
     "    ###############################################################\n",
     "    \n",
@@ -602,7 +623,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 88,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -610,7 +631,11 @@
     "def model_inference(model, image, text_inputs):\n",
     "\n",
     "    ##################### Write your answer here ##################\n",
+    "    with torch.no_grad():\n",
+    "        image_features = model.encode_image(image)\n",
+    "        text_features = model.encode_text(text_inputs)\n",
     "    \n",
+    "        logits,_=model(image,text_inputs)\n",
     "\n",
     "    ###############################################################\n",
     "\n",
@@ -627,14 +652,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 89,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "the zero-shot performance on CIFAR10 is 55.84%, visual encoder is RN50\n"
+      "the zero-shot performance on CIFAR10 is 61.81%, visual encoder is RN50.\n"
      ]
     }
    ],
@@ -647,16 +672,18 @@
     "    model.eval()\n",
     "\n",
     "    ##################### Write your answer here ##################\n",
+    "    var_correct=0\n",
+    "    for image,target in test_dataloader:\n",
+    "        image=image.to(device)\n",
+    "        target=target.to(device)\n",
+    "        \n",
+    "        _,preds=torch.max(model_inference(model,image,prompt_encode(prompt)),1)\n",
+    "        \n",
+    "        var_correct+=torch.sum(preds==target.data)\n",
+    "    val_acc=var_correct/len(test_set)\n",
+    "    ###############################################################\n",
     "\n",
-    "\n",
-    "\n",
-    "     ###############################################################\n",
-    "\n",
-    "\n",
-    "\n",
-    "    print(f\"the zero-shot performance on {dataset_name} is {val_acc*100:.2f}%, visual encoder is {VISUAL_BACKBONE}.\")\n",
-    "\n",
-    "\n"
+    "    print(f\"the zero-shot performance on {dataset_name} is {val_acc*100:.2f}%, visual encoder is {VISUAL_BACKBONE}.\")"
    ]
   }
  ],
