--- a/exercise_03.ipynb
+++ b/exercise_03.ipynb
@@ -566,23 +566,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "prompt = 'a photo of a' # you can try different prompt\n",
+    "prompt = \"asdqwedqwdwda\"\n",
     "\n",
-    "def prompt_encode(prompt):\n",
-    "    \"\"\"\n",
-    "    Args:\n",
-    "        prompt (str): the text prefix before the class\n",
-    "\n",
-    "    Returns:\n",
-    "        text_inputs(torch.Tensor)\n",
-    "\n",
-    "    \"\"\"\n",
-    "    ##################### Write your answer here ##################\n",
-    "    \n",
-    "\n",
-    "    ###############################################################\n",
-    "    \n",
-    "    return text_inputs\n"
+    "text_inputs = torch.cat([clip.tokenize(f\"{prompt} {c}\") for c in class_names]).to(device)"
    ]
   },
   {
@@ -606,15 +592,35 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "def model_inference(model, image):\n",
+    "    \"\"\"\n",
+    "    Perform one testing batch iteration.\n",
     "\n",
-    "def model_inference(model, image, text_inputs):\n",
+    "    Args:\n",
+    "        model (torch.nn.Module): The machine learning model to evaluate.\n",
+    "        image (torch.Tensor): Batch of input data (images).\n",
+    "        target (torch.Tensor): Batch of target labels.\n",
+    "\n",
+    "    Returns:\n",
+    "        torch.Tensor: Model output (predictions) for the batch.\n",
+    "        torch.Tensor: Loss value calculated for the batch.\n",
+    "    \"\"\"\n",
     "\n",
     "    ##################### Write your answer here ##################\n",
     "    \n",
+    "    image_features = model.encode_image(image)\n",
+    "    text_features = model.encode_text(text_inputs)\n",
+    "\n",
+    "    image_features /= image_features.norm(dim=-1, keepdim=True)\n",
+    "    text_features /= text_features.norm(dim=-1, keepdim=True)\n",
+    "\n",
+    "    logit_scale = model.logit_scale.exp()\n",
+    "\n",
+    "    logits = logit_scale * image_features @ text_features.t()\n",
     "\n",
     "    ###############################################################\n",
     "\n",
-    "    return logits"
+    "    return logits\n"
    ]
   },
   {
@@ -639,24 +645,31 @@
     }
    ],
    "source": [
-    "\n",
     "testing_loss = []\n",
     "testing_acc = []\n",
     "\n",
     "with torch.no_grad():\n",
     "    model.eval()\n",
     "\n",
-    "    ##################### Write your answer here ##################\n",
+    "    val_loss = 0.0\n",
+    "    val_corrects = 0\n",
+    "\n",
+    "    for batch_idx, (image, target) in enumerate(test_dataloader):\n",
+    "\n",
+    "        image = image.to(device)\n",
+    "        target = target.to(device)\n",
+    "\n",
+    "        # test model\n",
+    "        logits = model_inference(model, image)\n",
+    "        _, preds = torch.max(logits, 1)\n",
+    "        \n",
+    "        val_corrects += torch.sum(preds == target.data)\n",
+    "\n",
+    "    val_acc = val_corrects.double() / len(test_set)\n",
     "\n",
     "\n",
     "\n",
-    "     ###############################################################\n",
-    "\n",
-    "\n",
-    "\n",
-    "    print(f\"the zero-shot performance on {dataset_name} is {val_acc*100:.2f}%, visual encoder is {VISUAL_BACKBONE}.\")\n",
-    "\n",
-    "\n"
+    "    print(f\"the zero-shot performance on {dataset_name} is {val_acc*100:.2f}%, visual encoder is {VISUAL_BACKBONE}.\")"
    ]
   }
  ],
